--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="header"> 
-  <a href="#" class="header-link">Яндекс Практикум</a>
+  <a href="#" class="header-link">Яндекс Практикум1</a>
   </div>
 </body>
 </html>
